<resources>
    <string name="app_name">GPS útvonalrögzítő</string>
    <string name="Beallitások">Beállítások</string>
    <string name="Felhasználónév">Felhasználónév</string>
    <string name="Módosítás">Módosítás</string>
    <string name="Email">Email</string>
    <string name="Kép">Kép</string>
    <string name="Képcsere">Képcsere</string>
    <string name="Jelszó">Jelszó</string>
    <string name="JelszóMódosítás">Jelszó módosítás</string>
    <string name="Vissza">Vissza</string>
    <string name="google_app_id">56</string>
    <string name="title_activity_tura_maps">Map</string>
    <string name="AppName">GPS útvonal rögzítő</string>
    <string name="AuthorEmail">pizag.barnabas@gmail.com</string>
    <string name="Settings">Általános beállítások</string>
    <string name="EnableGPS">GPS bekapcsolasa</string>
    <string name="Roaming">Adatforgalom bekapcsolasa</string>
    <string name="PersonalSettings">Személyes adatok beállítása.</string>
    <string name="Tracks">Túrák megnyitása</string>
    <string name="phoneID">Telefon azonosító:</string>
    <string name="EmailAddress">E-mail cím</string>
    <string name="Name">Név</string>
    <string name="Password">Jelszó</string>
    <string name="PasswordAgain">Jelszó mégegyszer</string>
    <string name="ImageChange">Kép csere</string>
    <string name="Save">Mentés</string>
    <string name="ActualUserName">A jelenlegi felhasználóneved:</string>
    <string name="NewUserName">Írd be az új felhasználóneved</string>
    <string name="SaveName">Mentés</string>
    <string name="Undo">Mégse</string>
    <string name="PasswordChange">Jelszó módosítás:</string>
    <string name="ActualPassword">Írd be az aktuális jelszavad!</string>
    <string name="WriteNewPassword">Írd be az új jelszavad!</string>
    <string name="WriteNewPasswordAgain">Írd be az új jelszavad!</string>
    <string name="SavePassword">Mentés</string>
    <string name="UndoPassword">Mégse</string>
</resources>
