<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PasswordChange"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:singleLine="false"
        android:paddingTop="50px" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSettingsChangeJelszoModositasRegiJelszo"
        android:hint="@string/ActualPassword" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSettingsChangeJelszoModositasUjJelszo_1"
        android:hint="@string/WriteNewPassword" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSettingsChangeJelszoModositasUjJelszo_2"
        android:hint="@string/WriteNewPasswordAgain" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SavePassword"
        android:id="@+id/button"
        android:onClick="SettingsChangeJelszoModositasMentesOnclick"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/UndoPassword"
        android:id="@+id/button2"
        android:onClick="SettingsChangeJelszoModositasMegseOnclick"/>

</LinearLayout>
