<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".SettingsChange_Activity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.pbarn.gps_bead.SettingsChange_Activity">


        <TextView
            android:id="@+id/textViewSettingsChangeFelhasznalonev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="false"
            android:autoText="false"
            android:text="@string/Felhasználónév"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonSettingsChangeFelhasznalonevModositas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="FelhasznalonevModositasOnClick"
            android:text="@string/Módosítás" />

        <TextView
            android:id="@+id/textViewSettingsChangeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="false"
            android:autoText="false"
            android:text="@string/Email"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageViewSettingsChangeKep"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="#f3e5e5"
            android:clickable="true"
            android:contentDescription="@string/Kép"
            android:onClick="settings_change_Kepcsere"
            android:src="@android:drawable/sym_def_app_icon" />

        <Button
            android:id="@+id/buttonSettingsChangeKepModositas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="settings_change_Kepcsere"
            android:text="@string/Képcsere" />


        <TextView
            android:id="@+id/textViewSettingsChangeJelszo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="false"
            android:autoText="false"
            android:text="@string/Jelszó"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonJelszoModositas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="JelszoModositasOnClick"
            android:text="@string/JelszóMódosítás" />


        <Button
            android:id="@+id/buttonVisszaMainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="VisszaSettingsActivityOnClick"
            android:text="@string/Vissza" />

    </LinearLayout>
</ScrollView>