<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Mainmenu_Activity">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@android:drawable/ic_menu_manage" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />


        <!-- </LinearLayout> -->
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/navigationbar_fejlec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/side_nav_bar"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:paddingTop="5dp"
                        android:src="@android:drawable/sym_def_app_icon" />



                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView"
                        android:paddingTop="16dp"
                        android:text="@string/AppName" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView1"
                        android:text="@string/AuthorEmail" />

                    <ToggleButton
                        android:id="@+id/utvonalRogzitesIndatasToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_below="@id/textView2"
                        android:textOn= "Utvonal Rögzítés leállítása!"
                        android:textOff=" Utvonal Rögzítés indítása! "
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <!--    <Switch
                        android:id="@+id/wifi_switch"
                        android:padding="20dp"
                        android:layout_below="@+id/navigationbar_fejlec"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Wifi" /> -->
                <TextView
                    android:id="@+id/altalanos_beallitasok"
                    android:drawableLeft="@drawable/ic_setting_dark"
                    android:drawablePadding="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/navigationbar_fejlec"
                    android:padding="5dp"
                    android:singleLine="false"
                    android:text="@string/Settings"
                    android:textColor="#4a4343"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:gravity="center" />


                <TextView
                    android:id="@+id/GpsBekapcsolasTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/altalanos_beallitasok"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/EnableGPS" />

                <TextView
                    android:id="@+id/AdatforgalomBekapcsolasTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/GpsBekapcsolasTextView"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/Roaming" />

                <View
                    android:id="@+id/elvalaszto_vonal"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_below="@+id/AdatforgalomBekapcsolasTextView"
                    android:background="#fefefe" />


                <TextView
                    android:drawableLeft="@android:drawable/ic_menu_mapmode"
                    android:drawablePadding="5dp"
                    android:id="@+id/MenuValasztasTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/elvalaszto_vonal"
                    android:padding="5dp"
                    android:text="Menü választás"
                    android:textColor="#4a4343"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:gravity="center"/>


                <TextView
                    android:id="@+id/SzemelyesBeallitasokTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/MenuValasztasTextView"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/PersonalSettings" />

                <TextView
                    android:id="@+id/TurakTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SzemelyesBeallitasokTextView"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/Tracks" />


            </RelativeLayout>
        </ScrollView>
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
